Made it into my devbox

--- a/run.conf
+++ b/run.conf
@@ -1,5 +1,5 @@
-DOCKER_USER=jdeathe
-DOCKER_IMAGE_NAME=centos-ssh
+DOCKER_USER=viklund
+DOCKER_IMAGE_NAME=centos-devbox
 DOCKER_IMAGE_TAG=latest
 
 SERVICE_UNIT_NAME=ssh
