Renamed centos-agda into devbox-slurm

--- a/devbox-slurm/Dockerfile
+++ b/devbox-slurm/Dockerfile
@@ -1,5 +1,5 @@
 # =============================================================================
-# viklund/centos-agda
+# viklund/devbox-slurm
 # =============================================================================
 
 FROM viklund/centos-devbox:v4
