--- a/devbox-slurm/slurm.conf
+++ b/devbox-slurm/slurm.conf
@@ -2,7 +2,7 @@
 # Put this file on all nodes of your cluster.
 # See the slurm.conf man page for more information.
 #
-ControlMachine=test1
+ControlMachine=<nodename>
 #ControlAddr=
 #BackupController=
 #BackupAddr=
@@ -156,5 +156,5 @@ SlurmdDebug=3
 
 #
 # COMPUTE NODES
-NodeName=test1 CPUs=1 State=UNKNOWN
-PartitionName=debug Nodes=test1 Default=YES MaxTime=1440 State=UP
+NodeName=<nodename> CPUs=1 State=UNKNOWN
+PartitionName=debug Nodes=<nodename> Default=YES MaxTime=1440 State=UP
