--- a/devbox-slurm/supervisor_centos_agda.conf
+++ b/devbox-slurm/supervisor_centos_agda.conf
@@ -1,5 +1,15 @@
+[program:slurm_bootstrap]
+command = /etc/slurm-bootstrap
+priority = 5
+startsecs = 0
+startretries = 0
+autorestart = false
+stdout_logfile = /var/log/supervisor/%(program_name)s.log
+stdout_events_enabled = true
+
 [program:munge]
 command=/usr/sbin/munged
+priority = 10
 stdout_logfile=/var/log/supervisor/%(program_name)s.log
 stderr_logfile=/var/log/supervisor/%(program_name)s.log
 autostart=true
@@ -10,6 +20,7 @@ exitcodes=0,1,2
 
 [program:slurmctld]
 command=/usr/sbin/slurmctld -D -vvvvvv
+priority = 10
 stdout_logfile=/var/log/supervisor/%(program_name)s.log
 stderr_logfile=/var/log/supervisor/%(program_name)s.log
 autostart=true
@@ -20,6 +31,7 @@ exitcodes=0,1,2
 
 [program:slurmd]
 command=/usr/sbin/slurmd -D -vvvvvv
+priority = 10
 stdout_logfile=/var/log/supervisor/%(program_name)s.log
 stderr_logfile=/var/log/supervisor/%(program_name)s.log
 autostart=true
