[centos-devbox] Enabling supervisorctl interface

--- a/centos-devbox/etc/services-config/supervisor/supervisord.conf
+++ b/centos-devbox/etc/services-config/supervisor/supervisord.conf
@@ -8,6 +8,15 @@ minfds = 1024
 minprocs = 200
 nodaemon = true
 
+[unix_http_server]
+file=/tmp/supervisord.sock
+
+[supervisorctl]
+serverurl = unix:///tmp/supervisord.sock
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
 [program:sshd_bootstrap]
 priority = 5
 command = /etc/ssh-bootstrap
